bpk-lib/crates/macbat/macros/tests/trybuild_negative/error_from_multi_field.rs
use macbat::Error;
#[derive(Debug)]
struct Leaf;
#[derive(Error)]
enum E {
    #[error("multi")]
    V(#[from] Leaf, u32),
}
fn main() {}
